--- a/.config/kitty/themes/colors.conf
+++ b/.config/kitty/themes/colors.conf
@@ -1,11 +1,11 @@
-cursor #e6e1e9
-cursor_text_color #cac4cf
+cursor #dde4e3
+cursor_text_color #bec8c8
 
-foreground            #e6e1e9
-background            #141218
-selection_foreground  #332d41
-selection_background  #cbc2dc
-url_color             #cfbdfe
+foreground            #dde4e3
+background            #0e1415
+selection_foreground  #1b3435
+selection_background  #b0cccc
+url_color             #80d4d7
 
 # black
 color8   #262626
@@ -25,7 +25,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #cfbdfe
+color4  #80d4d7
 color12 #a39ec4
 
 # magenta
