--- a/.config/kitty/themes/colors.conf
+++ b/.config/kitty/themes/colors.conf
@@ -1,13 +1,13 @@
 # Generated with Matugen
 
-cursor #eedfe3
-cursor_text_color #d4c2c8
+cursor #e2e2e2
+cursor_text_color #c0c8c9
 
-foreground            #eedfe3
-background            #191114
-selection_foreground  #412a34
-selection_background  #e0bdcb
-url_color             #fdb0d3
+foreground            #e2e2e2
+background            #111414
+selection_foreground  #233335
+selection_background  #b8cacc
+url_color             #a0cfd4
 
 # black
 color8   #262626
@@ -27,7 +27,7 @@ color11  #c4c19e
 
 # blue
 /* color4  #8f8aac */
-color4  #fdb0d3
+color4  #a0cfd4
 color12 #a39ec4
 
 # magenta
