--- a/.config/qt5ct/colors/material.conf
+++ b/.config/qt5ct/colors/material.conf
@@ -1,5 +1,5 @@
 [ColorScheme]
-active_colors=#eedfe3, #191114, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #eedfe3, #ffffff, #eedfe3, #191114, #191114, #000000, #6d3351, #ffd8e7, #e0bdcb, #fdb0d3, #191114, #000000, #191114, #eedfe3, #e0bdcb
-disabled_colors=#eedfe3, #191114, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #eedfe3, #ffffff, #eedfe3, #191114, #191114, #000000, #6d3351, #ffd8e7, #e0bdcb, #fdb0d3, #191114, #000000, #191114, #eedfe3, #e0bdcb
-inactive_colors=#eedfe3, #191114, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #eedfe3, #ffffff, #eedfe3, #191114, #191114, #000000, #6d3351, #ffd8e7, #e0bdcb, #fdb0d3, #191114, #000000, #191114, #eedfe3, #e0bdcb
+active_colors=#e2e2e2, #111414, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #e2e2e2, #ffffff, #e2e2e2, #111414, #111414, #000000, #6a989d, #000000, #b8cacc, #a0cfd4, #111414, #000000, #111414, #e2e2e2, #b8cacc
+disabled_colors=#e2e2e2, #111414, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #e2e2e2, #ffffff, #e2e2e2, #111414, #111414, #000000, #6a989d, #000000, #b8cacc, #a0cfd4, #111414, #000000, #111414, #e2e2e2, #b8cacc
+inactive_colors=#e2e2e2, #111414, #ffffff, #cacaca, #9f9f9f, #b8b8b8, #e2e2e2, #ffffff, #e2e2e2, #111414, #111414, #000000, #6a989d, #000000, #b8cacc, #a0cfd4, #111414, #000000, #111414, #e2e2e2, #b8cacc
 
